--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -1,185 +1,154 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<!doctype html>
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .sidebar {
-            height: 100vh;
-            background-color: #f8f9fa;
-            padding: 20px;
-        }
-        .admin-panel-info {
-            background-color: #343a40;
-            color: white;
-            padding: 10px;
-        }
-        .tab {
-            cursor: pointer;
-            padding: 10px;
-            margin-right: 10px;
-            background-color: #f8f9fa;
-            border: none;
-        }
-        .tab.active {
-            background-color: #e9ecef;
-            color: black;
-        }
-        .hidden {
-            display: none;
-        }
-        .visible {
-            display: block;
-        }
-        .nav-tabs {
-            padding: 10px 0;
-        }
-    </style>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-$(document).ready(function() {
-    // Обработка клика по вкладкам
-    $('.tab').click(function() {
-        var tabId = $(this).data('target');
-        $('.tab').removeClass('active'); // Убираем активный класс со всех вкладок
-        $(this).addClass('active'); // Добавляем класс активности к текущей вкладке
-        $('.visible, .hidden').addClass('hidden').removeClass('visible');
-        $('#' + tabId).addClass('visible').removeClass('hidden');
-    });
-
-    // Обработка клика по ссылкам навигации
-    $('.nav-link').click(function() {
-        var sectionId = $(this).data('target');
-        $('.visible, .hidden').addClass('hidden').removeClass('visible');
-        $('#' + sectionId).addClass('visible').removeClass('hidden');
-    });
-
-    // Инициализация модальных окон Bootstrap
-    $('[data-toggle="modal"]').click(function() {
-        var modalId = $(this).data('target');
-        $(modalId).modal('show');
-    });
-});
-</script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-
-
-
-
-<div class="admin-panel-info">
-    <div class="container">
-        <span sec:authentication="name">[Username]</span> with roles: 
-        <span sec:authentication="authorities">[Roles]</span>
+<header>
+    <div class="container-fluid bg-dark text-white">
+        <div class="row align-items-center" style="height: 60px;">
+            <div class="col">
+                Email: <span th:text="${principal.username}">EMAIL</span> with roles: <span th:text="${principal.authoritiesString}">Roles</span>
+            </div>
+            <div class="col-auto">
+                <form th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-secondary" type="submit" value="Logout"/>
+                </form>
+            </div>
+        </div>
     </div>
-</div>
-
+</header>
 <div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <div class="sidebar-sticky">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-target="userTable" href="#">Admin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="userProfile" href="#">User</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <div class="row" style="height: calc(100vh - 60px);">
+        <div class="col-2 py-4 px-0">
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="pill" href="#adminPanel">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="pill" href="#userPanel">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-10 py-4" style="background-color: rgb(248, 249, 250);">
+            <div class="tab-content">
+                <div id="adminPanel" class="tab-pane fade show active">
+                    <h1>Admin Panel</h1>
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#allUsers">Users table</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#newUser">New User</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="allUsers" class="tab-pane fade show active">
+                            <h4>AllUsers</h4>
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.id}"></td>
+                                    <td th:text="${user.firstName}"></td>
+                                    <td th:text="${user.lastName}"></td>
+                                    <td th:text="${user.email}"></td>
+                                    <td th:text="${user.rolesString}"></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary edit-user"
+                                                th:data-userid="${user.id}"
+                                                th:data-firstname="${user.firstName}"
+                                                th:data-lastname="${user.lastName}"
+                                                th:data-email="${user.email}"
+                                                data-toggle="modal">Edit</button>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger delete-user"
+                                                th:data-userid="${user.id}"
+                                                data-toggle="modal">Delete</button>
+                                    </td>
+                                </tr>
+                                </tbody>
 
-        <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-4">
-            <div class="nav-tabs">
-                <button class="tab" data-target="userTable">Users table</button>
-                <button class="tab" data-target="addUserForm">New User</button>
+                            </table>
+                        </div>
+                        <div id="newUser" class="tab-pane fade">
+                            <h4>Add New User</h4>
+                            <form th:action="@{/admin/add}" method="post" th:object="${newUser}">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                                <div class="form-group">
+                                    <label for="firstName">First Name:</label>
+                                    <input type="text" class="form-control" th:field="*{firstName}" id="firstName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="lastName">Last Name:</label>
+                                    <input type="text" class="form-control" th:field="*{lastName}" id="lastName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" class="form-control" th:field="*{email}" id="email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="password" class="form-control" th:field="*{password}" id="password">
+                                </div>
+                                <div class="form-group">
+                                    <label for="roles">Roles:</label>
+                                    <select multiple class="form-control" th:field="*{roles}" id="roles">
+                                        <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+                                    </select>
+                                </div>
+                                <button type="submit" class="btn btn-success">Add User</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div id="userPanel" class="tab-pane fade">
+                    <h1>User Information</h1>
+                    <div>About user information</div>
+                    <!-- User details and other content go here -->
+                </div>
             </div>
-            <div id="userTable" class="visible">
-                <h2>Admin panel</h2>
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Email</th>
-                            <th>Roles</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="user : ${users}">
-                            <td th:text="${user.id}">1</td>
-                            <td th:text="${user.firstName}">John</td>
-                            <td th:text="${user.lastName}">Doe</td>
-                            <td th:text="${user.email}">john.doe@example.com</td>
-                            <td>
-                                <span th:each="role, iterStat : ${user.roles}" th:text="${role.name} + (iterStat.last ? '' : ', ')">Admin, User</span>
-                            </td>
-                            <td>
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editUserModal-${user.id}">
-                                    Edit
-                                </button>
-                            </td>
-                            <td>
-                                <form th:action="@{/admin/delete}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                                    <input type="hidden" name="userId" th:value="${user.id}" />
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div id="addUserForm" class="hidden">
-                <h2>Add New User</h2>
-                <!-- Add user form content goes here -->
-            </div>
-            <div id="userProfile" class="hidden">
-                <h2>User Profile</h2>
-                <!-- User profile content goes here -->
-            </div>
-        </main>
+        </div>
     </div>
 </div>
-
-<!-- Modal for Edit User -->
-<div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserModalLabel" aria-hidden="true">
+<div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+                <h5 class="modal-title" id="editUserLabel">Edit User</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form th:action="@{/admin/edit}" method="post" th:object="${user}" id="editUserForm">
-                    <input type="hidden" name="id" th:field="*{id}"/>
+                <!-- Форма редактирования -->
+                <form action="/admin/edit" method="post">
+                    <input type="hidden" id="editUserId" name="userId">
                     <div class="form-group">
-                        <label for="firstNameModal">First Name:</label>
-                        <input type="text" class="form-control" id="firstNameModal" th:field="*{firstName}"/>
+                        <label for="editUserFirstName">First Name:</label>
+                        <input type="text" class="form-control" id="editUserFirstName" name="firstName">
                     </div>
                     <div class="form-group">
-                        <label for="lastNameModal">Last Name:</label>
-                        <input type="text" class="form-control" id="lastNameModal" th:field="*{lastName}"/>
+                        <label for="editUserLastName">Last Name:</label>
+                        <input type="text" class="form-control" id="editUserLastName" name="lastName">
                     </div>
                     <div class="form-group">
-                        <label for="emailModal">Email:</label>
-                        <input type="email" class="form-control" id="emailModal" th:field="*{email}"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="roleModal">Role:</label>
-                        <select class="form-control" id="roleModal" th:field="*{role}">
-                            <option value="ADMIN">Admin</option>
-                            <option value="USER">User</option>
-                        </select>
+                        <label for="editUserEmail">Email:</label>
+                        <input type="email" class="form-control" id="editUserEmail" name="email">
                     </div>
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                 </form>
@@ -188,7 +157,63 @@ $(document).ready(function() {
     </div>
 </div>
 
+<!-- Delete User Modal -->
+<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="deleteUserLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteUserLabel">Confirm Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
+            <div class="modal-footer">
+                <form th:action="@{/admin/delete}" method="post">
+                    <input type="hidden" id="deleteUserId" name="userId">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('a[data-toggle="pill"]').on('shown.bs.tab', function (e) {
+            e.target // newly activated tab
+            e.relatedTarget // previous active tab
+        })
+    });
+
+    $(document).ready(function() {
+        $('.edit-user').on('click', function() {
+            var userId = $(this).data('userid');
+            var firstName = $(this).data('firstname');
+            var lastName = $(this).data('lastname');
+            var email = $(this).data('email');
+
+            $('#editUserId').val(userId);
+            $('#editUserFirstName').val(firstName);
+            $('#editUserLastName').val(lastName);
+            $('#editUserEmail').val(email);
+
+            $('#editUserModal').modal('show');
+        });
+
+        $('.delete-user').on('click', function() {
+            var userId = $(this).data('userid');
+            $('#deleteUserId').val(userId);
+            $('#deleteUserModal').modal('show');
+        });
+    });
+</script>
 </body>
 </html>
