--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,30 +1,50 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="ru">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>User Information Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<header>
+    <div class="container-fluid bg-dark text-white">
+        <div class="row align-items-center" style="height: 60px;">
+            <div class="col">
+                Email: <span id="userEmail">Загрузка...</span> with roles: <span id="userRoles">Загрузка...</span>
+            </div>
+            <div class="col-auto">
+                <form th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-secondary" type="submit" value="Logout"/>
+                </form>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="container-fluid">
+    <div class="row" style="height: calc(100vh - 60px);">
+        <div class="col-2 py-4 px-0">
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/user">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-10 py-4" style="background-color: rgb(248, 249, 250);">
+            <h1>User Information Page</h1>
+            <h2>About user</h2>
+            <div id="currentUserInfo">
+                <p><strong>ID:</strong> <span id="fullUserId"></span></p>
+                <p><strong>First Name:</strong> <span id="fullUserFirstName"></span></p>
+                <p><strong>Last Name:</strong> <span id="fullUserLastName"></span></p>
+                <p><strong>Email:</strong> <span id="fullUserEmail"></span></p>
+                <p><strong>Roles:</strong> <span id="fullUserRoles"></span></p>
+            </div>
+        </div>
+    </div>
+</div>
 
-<table>
-    <thead>
-    <tr>
-        <th>Email</th>
-        <th>Name</th>
-        <th>Last Name</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.email}">Email</td>
-        <td th:text="${user.name}">Name</td>
-        <td th:text="${user.lastName}">Last Name</td>
-    </tr>
-    </tbody>
-</table>
-<form action="/logout" method="post">
-    <button type="submit">Logout</button>
-</form>
-
-</body>
-</html>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="/userscript.js"></script>
